@@ -1,3 +1,8 @@
+2012-12-27  Sancho Lerena <slerena@artica.es>
+
+	* util/pandora_db.pl: Implemented deletion of old inventory
+	data (using data delete interval).
+
 2012-12-10  Sancho Lerena <slerena@artica.es>
 
 	* lib/PandoraFMS/Tools.pm: Decode output in all logfile output.
